Project

General

Profile

Actions

Bug #19443

closed

Response header of swift API returned by radosgw does not contain "x-openstack-request-id". But Swift returns it.

Added by Anonymous about 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Found the bug when verified Swift API with Ceph radosgw. According to OpenStack Swift API document (https://docs.openstack.org/developer/swift/api/object_api_v1_overview.html?highlight=openstack), the response header of swift API should contain "x-openstack-request-id", its value is same as X-Trans-Id. For example:

curl -i -X PUT -H "Content-Type: application/json" -H "Accept: application/json" -H "X-Auth-Token: xxxxxxxxxxx" http://10.169.42.41:7480/swift/v1/AUTH_d6b422cc66fd4cd4ab9e1f2424b3cb36/Container1/TestObject-1 -d "testtesttes"

HTTP/1.1 200 OK
X-Trans-Id: tx000000000000000000d01-0058df5b03-10b0-default
Content-Type: application/json; charset=utf-8
Content-Length: 440
Date: Sat, 01 Apr 2017 07:47:15 GMT


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #19573: kraken: rgw: Response header of swift API returned by radosgw does not contain "x-openstack-request-id". But Swift returns it.ResolvedNathan CutlerActions
Actions #1

Updated by Anonymous about 7 years ago

  • Assignee set to Anonymous

I'm working on the issue.

Actions #2

Updated by Anonymous about 7 years ago

Please review the PR https://github.com/ceph/ceph/pull/14280.
Thanks!

Actions #3

Updated by Nathan Cutler about 7 years ago

  • Project changed from Ceph to rgw
  • Category deleted (22)
Actions #4

Updated by Casey Bodley about 7 years ago

  • Status changed from New to Fix Under Review
Actions #5

Updated by Radoslaw Zarzynski about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to kraken
Actions #6

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19573: kraken: rgw: Response header of swift API returned by radosgw does not contain "x-openstack-request-id". But Swift returns it. added
Actions #7

Updated by Nathan Cutler almost 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF