  rgw: fix response header of Swift API

Response header of Swift API returned by radosgw does not contain
"x-openstack-request-id", but Swift returns it. Enhance the
compatibility of radosgw.

Fixes: http://tracker.ceph.com/issues/19443

Signed-off-by: tone-zhang <tone.zhang@linaro.org>
(cherry picked from commit e96db213079ab5e026156ab4b38418d1d4c23d27)